force-app/main/default/objects/Property_Portfolio__c/Property_Portfolio__c.object-meta.xml
<CustomObject>
    <label>Property Portfolio</label>
    <nameField>
        <displayFormat>PPN-{000000}</displayFormat>
        <label>Property Portfolio Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Portfolios</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>