force-app/main/default/objects/Property_Portfolio__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Property Portfolios</relationshipLabel>
    <relationshipName>Property_Portfolios</relationshipName>
    <type>Lookup</type>
</CustomField>