force-app/main/default/objects/Property_Portfolio__c/fields/Current_mortgage_balance__c.field-meta.xml
<CustomField>
    <fullName>Current_mortgage_balance__c</fullName>
    <label>Current Mortgage Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>