force-app/main/default/objects/Property_Portfolio__c/fields/Current_mortgage_payment__c.field-meta.xml
<CustomField>
    <fullName>Current_mortgage_payment__c</fullName>
    <label>Current Mortgage Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>