force-app/main/default/objects/Property_Portfolio__c/fields/Existing_property_type__c.field-meta.xml
<CustomField>
    <fullName>Existing_property_type__c</fullName>
    <label>Existing Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main residence</fullName>
            </value>
            <value>
                <fullName>Tenanted</fullName>
            </value>
            <value>
                <fullName>Holiday home</fullName>
            </value>
            <value>
                <fullName>Second home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>