force-app/main/default/objects/Property_Portfolio__c/fields/Initial_rate__c.field-meta.xml
<CustomField>
    <fullName>Initial_rate__c</fullName>
    <label>Initial rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>