force-app/main/default/objects/Property_Portfolio__c/fields/Interest_balance__c.field-meta.xml
<CustomField>
    <fullName>Interest_balance__c</fullName>
    <label>Interest Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>