force-app/main/default/objects/Property_Portfolio__c/fields/Is_this_a_joint_mortgage__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_joint_mortgage__c</fullName>
    <label>Is this a joint mortgage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>