force-app/main/default/objects/Property_Portfolio__c/fields/Lender__c.field-meta.xml
<CustomField>
    <fullName>Lender__c</fullName>
    <label>Lender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>