force-app/main/default/objects/Property_Portfolio__c/fields/PP_Property_Value__c.field-meta.xml
<CustomField>
    <fullName>PP_Property_Value__c</fullName>
    <description>Property Portfolio Property Value</description>
    <inlineHelpText>Property Portfolio Property Value</inlineHelpText>
    <label>Property Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>