force-app/main/default/objects/Property_Portfolio__c/fields/Property_address_line_1__c.field-meta.xml
<CustomField>
    <fullName>Property_address_line_1__c</fullName>
    <label>Property address line 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>