force-app/main/default/objects/Property_Portfolio__c/fields/Property_value_deprecated__c.field-meta.xml
<CustomField>
    <fullName>Property_value_deprecated__c</fullName>
    <label>Property Value Deprecated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>