force-app/main/default/objects/Property_Portfolio__c/fields/Remaining_Term_months__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Term_months__c</fullName>
    <label>Remaining Term (months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>