force-app/main/default/objects/Property_Portfolio__c/fields/Remaining_Term_years__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Term_years__c</fullName>
    <label>Remaining Term (years)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>