force-app/main/default/objects/Property_Portfolio__c/fields/Repayment_Balance__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Balance__c</fullName>
    <label>Repayment Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>